# ROps

./: README.md
gemm/: readme.md  setup.py  test.sh
gemm/RGemm/: ops.py
gemm/RGemm/myops/include/: 00naive.h  01blocktiling.h  02threadtiling.h
gemm/RGemm/myops/src/: 00naive.cu  01blocktiling.cu  02threadtiling.cu  ops.cpp
gemm/test/: CMakeLists.txt  gemm_test.py  performance.py
